Fix spacing for paragraph in invest section

--- a/packages/website_v2/src/components/Invest/Invest.scss
+++ b/packages/website_v2/src/components/Invest/Invest.scss
@@ -80,8 +80,8 @@
     line-height: 28px;
   }
 
-  > div:first-child {
-    margin-bottom: 12px;
+  > p:first-child {
+    margin: 0 0 12px 0;
   }
 }
 
